Enable GDK_ACTION_MOVE when from icon search view

Currently, GDK_ACTION_MOVE is possible from search view
only if it is in list view. This commit allows the move
even when the search view is in icon view.

https://bugzilla.gnome.org/show_bug.cgi?id=657637