libnautilus-private/nautilus-canvas-private.h
@@ -168,7 +168,6 @@ struct NautilusCanvasContainerDetails {
 	DragState drag_state;
 	gboolean drag_started;
 	StretchState stretch_start;
-	gboolean drag_allow_moves;
 
 	gboolean icon_selected_on_button_down;
 	NautilusCanvasIcon *double_click_icon[2]; /* Both clicks in a double click need to be on the same icon */
